--- a/style.css
+++ b/style.css
@@ -49,6 +49,17 @@ body {
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
 }
 
+.ball svg {
+  width: 60%;
+  height: 60%;
+  display: block;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .controls {
   position: absolute;
   top: 20px;
